# GerberStencilGenerator

./: .astylerc  .gitignore  CMakeLists.txt  GerberStencilGenerator.pro  README.md  apertureeditview.cpp  apertureeditview.h  aperturelistwidget.cpp  aperturelistwidget.h  color.h  editableslider.cpp  editableslider.h  floatcompare.h  gerberplotterdialog.cpp  gerberplotterdialog.h  gerberplotterdialog.ui  gerberstencilgenerator.cpp  gerberstencilgenerator.h  gerberstencilgenerator.ui  hollowgraphicsellipseitem.cpp  hollowgraphicsellipseitem.h  hollowgraphicsobrounditem.cpp  hollowgraphicsobrounditem.h  hollowgraphicspolygonitem.cpp  hollowgraphicspolygonitem.h  hollowgraphicsrectitem.cpp  hollowgraphicsrectitem.h  hollowroundedgraphicspolygonitem.cpp  hollowroundedgraphicspolygonitem.h  hollowroundedgraphicsrectitem.cpp  hollowroundedgraphicsrectitem.h  main.cpp  renderthread.cpp  renderthread.h  resources.qrc  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  shapeicon.cpp  shapeicon.h  (+6 more)
deploy/Assets.xcassets/AppIcon.appiconset/: Contents.json
deploy/GerberStencilGenerator.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
deploy/GerberStencilGenerator.xcodeproj/xcshareddata/xcschemes/: GerberStencilGenerator.xcscheme
docs/: GERBER
resources/: .gitignore  resources.qrc  tips.json  tips.schema
resources/appicon/: icon.icns
resources/testdata/: Readme  testdata.url
resources/translations/: tips_en.json
src/: aperturelistwidget.h  enums.h  floatcompare.h  gerberplotterdialog.h  gerberstencilgenerator.cpp  gerberstencilgenerator.h  hollowgraphicsellipseitem.cpp  hollowgraphicsobrounditem.h  hollowgraphicspolygonitem.cpp  hollowgraphicspolygonitem.h  hollowroundedgraphicspolygonitem.cpp  hollowroundedgraphicsrectitem.h  main.cpp  renderthread.cpp  settingsdialog.h  slidersizelabel.h  tipoftheday.cpp  tipoftheday.h
ui/: gerberstencilgenerator.ui  settingsdialog.ui
